# extra-cmake-modules

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  ECMConfig.cmake  ECMConfig.cmake.in  ECMConfigVersion.cmake  ECMConfigVersion.cmake.in  Jenkinsfile  README  README.md  README.rst  am2cmake  build.py  conanfile.py  extra-cmake-modules-config-version.cmake.in  extra-cmake-modules-config.cmake.in  generate_findpackage_file  metainfo.yaml
attic/modules/: CMakeLists.txt  CheckCXXSourceCompiles.cmake  CheckCXXSourceRuns.cmake  CheckCXXSymbolExists.cmake  FindAlsa.cmake  FindBlitz.cmake  FindDocBookXML.cmake  FindDocBookXSL.cmake  FindEigen2.cmake  FindExiv2.cmake  FindGLIB2.cmake  FindKDE4Internal.cmake  FindKDEWIN_Packager.cmake  FindKDEWin.cmake  FindKNepomuk.cmake  FindKdcraw.cmake  FindKexiv2.cmake  FindKipi.cmake  FindKopete.cmake  FindLCMS.cmake  FindMusicBrainz.cmake  FindNepomuk.cmake  FindOpenEXR.cmake  FindPolkitQt.cmake  FindPulseAudio.cmake  FindPyKDE4.cmake  FindPyQt4.cmake  FindSharedDesktopOntologies.cmake  FindSoprano.cmake  FindWcecompat.cmake  FindX11.cmake  KDE4Defaults.cmake  NepomukAddOntologyClasses.cmake  NepomukMacros.cmake
docs/: CMakeLists.txt  writing-find-modules.md
docs/find-module/: Find7Zip.rst  Find7z.rst  FindExiv2.rst  FindFFmpeg.rst  FindGradle.rst  FindIsoCodes.rst  FindLibAssuan.rst  FindLibGpgError.rst  FindLibMount.rst  FindLibcap.rst  FindWaylandProtocols.rst  FindXkbcommon.rst  Findepoxy.rst  Findgzip.rst
docs/kde-module/: KDEDeprecationSettings.rst  KDEGitCommitHooks.rst  KDEInstallDirs5.rst  KDEInstallDirs6.rst  KDEMetaInfoPlatformCheck.rst
docs/manual/: ecm-developer.7.rst  ecm-find-modules.7.rst  ecm-kde-modules.7.rst  ecm-modules.7.rst
docs/module/: CheckAtomic.rst  ECMAddAndroidApk.rst  ECMCheckOutboundLicense.rst  ECMConfiguredInstall.rst  ECMDBusAddActivationService.rst  ECMDeprecationSettings.rst  ECMExtractMetaTypes.rst  ECMFeatureSummary.rst  ECMFindQmlModule.rst  ECMGenerateDBusServiceFile.rst  ECMGeneratePythonBindings.rst  ECMGenerateQDoc.rst  ECMInstalledLibraryCheck.rst  ECMQmlModule.rst  ECMQmlTests.rst  ECMQueryQt.rst  QtVersionOption.rst
docs/sphinx/: conf.py.in  ecm.py
modules/: BasicConfigVersion-SameMajorVersionWithPrereleases.cmake.in  CMakeLists.txt  CMakePackageConfigHelpers.cmake  CMakeParseArguments.cmake  COPYING-CMAKE-SCRIPTS  CheckAtomic.cmake  CheckCSourceRuns.cmake  CheckCXXCompilerFlag.cmake  CheckCXXSourceCompiles.cmake  CheckIncludeFiles.cmake  CheckPointerMember.cmake  CheckPrototypeExists.cmake  CheckStructMember.cmake  CheckSymbolExists.cmake  CheckTypeSize.cmake  ECMAddAndroidApk.cmake  ECMAddAppIcon.cmake  ECMAddQch.cmake  ECMAddQmlTests.cmake  ECMAddQtDesignerPlugin.cmake  ECMAddTests.cmake  ECMCargo.cmake  ECMCheckOutboundLicense.cmake  ECMConfig.cmake.in  ECMConfigVersion.cmake.in  ECMConfiguredInstall.cmake  ECMCoverageOption.cmake  ECMCreateQmFromPoFiles.cmake  ECMDBusAddActivationService.cmake  ECMDeprecationSettings.cmake  ECMEnableSanitizers.cmake  ECMExtractMetaTypes.cmake  ECMFeatureSummary.cmake  ECMFindModuleHelpers.cmake  ECMFindQMLModule.cmake.in  ECMFindQmlModule.cmake  ECMFindQmlModule.cmake.in  ECMGenerateDBusServiceFile.cmake  ECMGenerateExportHeader.cmake  ECMGenerateHeaders.cmake  (+224 more)
modules-tests/Xine/: CMakeLists.txt
samples/kcalc/: CMakeLists.txt  config.h.cmake
samples/kpager/: CMakeLists.txt
samples/view1394/: CMakeLists.txt
tests/: CMakeLists.txt  test_helpers.cmake
tests/ECMAddAppIconTest/: CMakeLists.txt  check_files.cmake.in
tests/ECMAddTests/: CMakeLists.txt  nameprefix_test_helpers.cmake
tests/ECMCheckOutboundLicenseTest/: CMakeLists.txt
tests/ECMConfiguredInstallTest/: CMakeLists.txt  check_tree.cmake.in  configured.txt  multi1.txt.in  multi2.txt.in
tests/ECMFindQmlModule/: CMakeLists.txt
tests/ECMFindQmlModuleTest/: CMakeLists.txt
tests/ECMGenerateDBusServiceFileTest/: CMakeLists.txt  check_tree.cmake.in
tests/ECMGenerateExportHeaderTest/: CMakeLists.txt
tests/ECMGenerateHeadersTest/: CMakeLists.txt  run_test.cmake.config
tests/ECMGeneratePkgConfigFile/: CMakeLists.txt  KF5CoreAddons.pc  KF5CoreAddons2.pc  KF5CoreAddons3.pc  KF5CoreAddons4.pc  KF5CoreAddons5.pc  KF6Attica.pc  metainfo_with_description.yaml  metainfo_with_empty_description.yaml  metainfo_without_description.yaml  run_test.cmake.config  test-and-comparison-helpers.cmake
tests/ECMInstallIconsTest/: CMakeLists.txt  check_tree.cmake.in
tests/ECMPoQmToolsTest/: CMakeLists.txt  check.cmake.in  check_conf.cmake.in  check_conf_static.cmake.in  check_tree.cmake.in  tr_test.cpp  tr_thread_test.cpp  tr_thread_test_module.cpp
tests/ECMQMLModules/: CMakeLists.txt
tests/ECMQmlModuleTest/: CMakeLists.txt  QmlModule.qml  QmlModule2.qml  TestModule_init.cpp  check.cmake.in  qmldir_expected_depends  qmldir_expected_depends.license  qmldir_expected_depends_qt5  qmldir_expected_depends_qt6  qmldir_expected_full  qmldir_expected_full_qt5  qmldir_expected_full_qt6  qmldir_expected_qmlonly  qmldir_expected_qmlonly_qt5  qmldir_expected_qmlonly_qt6  qmldir_expected_qmlonly_qt6.license  qmlmodule.cpp  qmlmodule.h
tests/ECMQmlTestsTest/: CMakeLists.txt  TestAnotherTestType_expected.qml  TestTestType_expected.qml  check.cmake.in  ecm_qmltests_test_expected.cpp  ecm_qmltests_test_expected.cpp.license
tests/ECMQtDeclareLoggingCategoryTest/: CMakeLists.txt  check.cmake.in  log.categories  testmain.cpp
tests/ECMSetupVersionTest/: CMakeLists.txt  version_helpers.cmake
tests/ECMToolchainAndroidTest/: CMakeLists.txt
tests/ExecuteAllModules/: CMakeLists.txt
tests/ExecuteCoreModules/: CMakeLists.txt
tests/ExecuteKDEModules/: CMakeLists.txt
tests/FindModules/: CMakeLists.txt
tests/GenerateSipBindings/: CMakeLists.txt  cpplib.cpp  cpplib.h  rules_SipTest.py  testscript.py
tests/KDEFetchTranslations/: CMakeLists.txt
tests/KDEInstallDirsTest/: CMakeLists.txt  var_list.cmake
tests/KDEPackageAppTemplatesCrossTest/: CMakeLists.txt  check.cmake.in
tests/KDEPackageAppTemplatesForcedTest/: CMakeLists.txt
tests/KDEPackageAppTemplatesTest/: CMakeLists.txt
(+238 files in other folders)
