if (WIN32)
    OPTION(KDE4_ENABLE_UAC_MANIFEST "add manifest to make vista uac happy" OFF)
    if (KDE4_ENABLE_UAC_MANIFEST)
        if (NOT MT_EXECUTABLE)
            find_program(MT_EXECUTABLE mt
                PATHS ${KDEWIN32_INCLUDE_DIR}/../bin
                NO_DEFAULT_PATH
            )
        endif (NOT MT_EXECUTABLE)
        if (MT_EXECUTABLE)
            message(STATUS "Found KDE manifest tool at ${MT_EXECUTABLE} ")
        else (MT_EXECUTABLE)
            message(STATUS "KDE manifest tool not found, manifest generating for Windows Vista disabled")
            set (KDE4_ENABLE_UAC_MANIFEST OFF)
        endif (MT_EXECUTABLE)
    endif (KDE4_ENABLE_UAC_MANIFEST)
endif (WIN32)

## install the cmake files
   
file(GLOB cmakeFiles "${CMAKE_CURRENT_SOURCE_DIR}/*.cmake")

set(module_install_dir ${DATA_INSTALL_DIR}/cmake/modules )

install( FILES cmake-modules-styleguide.txt 
               kde4init_dummy.cpp.in 
               kde4init_win32lib_dummy.cpp.in 
               kde4_cmake_uninstall.cmake.in 
               kde4automoc.files.in 
               BasicFindPackageVersion.cmake.in
               FindLibPython.py
               FindPyKDE4.py
               FindPyQt.py
               FindSIP.py
               PythonCompile.py
               ${cmakeFiles} 
         DESTINATION ${module_install_dir}  )

if (KDE4_ENABLE_UAC_MANIFEST)
    install( FILES Win32.Manifest.in
         DESTINATION ${module_install_dir}  
    )
endif (KDE4_ENABLE_UAC_MANIFEST)
         
# the files listed here will be removed by remove_obsoleted_cmake_files.cmake, Alex
#set(FILES_TO_REMOVE
#)

#install(SCRIPT ${CMAKE_CURRENT_BINARY_DIR}/remove_files.cmake )

#file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/remove_files.cmake "#generated by cmake, dont edit\n\n")
#foreach ( _current_FILE ${FILES_TO_REMOVE})
#   file(APPEND ${CMAKE_CURRENT_BINARY_DIR}/remove_files.cmake "message(STATUS \"Removing ${_current_FILE}\" )\n" )
#   file(APPEND ${CMAKE_CURRENT_BINARY_DIR}/remove_files.cmake "exec_program( ${CMAKE_COMMAND} ARGS -E remove ${_current_FILE} OUTPUT_VARIABLE _dummy)\n" )
#endforeach ( _current_FILE)

# create and install a man page for the kdelibs cmake modules
add_custom_target(KDECMakeModulesManPage ALL COMMAND ${CMAKE_COMMAND} -DCMAKE_MODULE_PATH=${CMAKE_CURRENT_SOURCE_DIR} --help-custom-modules ${CMAKE_CURRENT_BINARY_DIR}/kdecmake.1)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/kdecmake.1 DESTINATION "${MAN_INSTALL_DIR}/man1")
